package org.trip.top.demo.bouwsteen.state;

public class Uitgevoerd implements BouwsteenStatus {
}
